# cg-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.circleci/: config.yml
assets/: camera.txt
file/: CMakeLists.txt
file/inc/: file.h  filelib.h
file/src/: file.cpp
inc/utils/: timer.h
inc/window/: buffered_pane.h
math/: CMakeLists.txt  mathlib.h
math/inc/: mat3.h  mat4.h  mathlib.h  triangle.h  vec3.h  vec4.h
math/src/: mat3.cpp  mat4.cpp  triangle.cpp  vec3.cpp  vec4.cpp
render/: CMakeLists.txt  renderlib.h
render/inc/: context.h  entry.h  render.h  wrapper.h
render/inc/context/: camera.h  context.h  render.h  shader.h
render/inc/shaders/: basic_shader.h
render/inc/window/: buffered_pane.h
render/src/: .delete  camera.cpp  context.cpp  entry.cpp  main.cpp  render.cpp  shader.cpp  wrapper.cpp
render/src/context/: camera.cpp  context.cpp  render.cpp  shader.cpp
render/src/shaders/: basic_shader.cpp
render/src/window/: buffered_pane.cpp
src/: main.cpp
src/window/: buffered_pane.cpp
web/: package-lock.json  package.json
web/public/: index.html
web/public/assets/: camera.txt
web/public/scripts/: index.js
web/public/styles/: index.css  resets.css
